Add extra info to regression results